<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_img"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="4dp">

                <ImageView
                    android:id="@+id/iv_Foto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="5dp"
                    android:contentDescription="@string/photo"
                    android:src="@drawable/baseline_image_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cameraButton"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/camera"
                    app:layout_constraintBottom_toTopOf="@+id/et_desk"
                    app:layout_constraintEnd_toStartOf="@+id/galleryButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_default="wrap"
                   />

                <Button
                    android:id="@+id/galleryButton"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="13dp"
                    android:elevation="2dp"
                    android:scaleType="fitCenter"
                    android:text="@string/gallery"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cameraButton"
                    app:layout_constraintTop_toBottomOf="@+id/card_foto"
                    app:layout_constraintWidth_default="wrap" />
            </LinearLayout>

            <com.example.storyapp_ade.advanced_ui.MyEditText
                android:id="@+id/et_desk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_img"
                android:hint="@string/desk"
                android:inputType="textMultiLine"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="@id/card_foto"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/card_foto"
                app:layout_constraintTop_toBottomOf="@id/galleryButton" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permit_loc"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp" />

            <com.example.storyapp_ade.advanced_ui.MyButton
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="40dp"
                android:enabled="false"
                android:padding="15dp"
                android:text="@string/signup"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@id/et_desk"
                app:layout_constraintStart_toStartOf="@id/et_desk"
                app:layout_constraintTop_toBottomOf="@id/et_desk" />

            <ProgressBar
                android:id="@+id/pb_hero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMohon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_text"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pb_hero" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>